Add some images

--- a/_portfolio/010-ibm.md
+++ b/_portfolio/010-ibm.md
@@ -10,3 +10,12 @@ skills:
 ---
 
 First job starts from IBM.
+
+<div class="card mb-3">
+    <img class="card-img-top" src="/assets/lastworkingday_in_IBM.jpg"/>
+    <div class="card-body bg-light">
+        <div class="card-text">
+            This photo was taken at the gate of IBM China Development Lab in 2017.
+        </div>
+    </div>
+</div>
