Some updates on posts and profolio

--- a/_portfolio/010-ibm.md
+++ b/_portfolio/010-ibm.md
@@ -33,12 +33,11 @@ urgent issues during which earned a lot of experiences.
 
 From 2015, I moved on and switched my role to open source Hadoop team lead. I lead
 up a 3 people team to work on the IBM distribution of Hadoop, co-own this component
-with U.S peer team. My object was to ensure IBM distro of Hadoop fully satisfies
-customer's requirements. I fixed a lot of bugs and made a lot improvements, and I
+with U.S peer team. My object was to ensure IBM distribution of Hadoop fully satisfies
+customer's requirements. I've done a lot of bug fixes as well improvements, and I
 was also very active contributing these to apache community. In 2 years time, I've
 contributed more than 100 patches to HDFS, YARN and Hadoop common.
 
-Since 1 quarter of 2017, I started work on `Ozone` project. This project is leading
-by some Hadoop PMCs from Hortonworks. It is quite famous because of its ambition of
-fixing long-standing HDFS scalability and small-file problems. At Sep 2017, I was
-recognized to become to be an `Apache Hadoop Committer`.
+I love to solve difficult problems. Since 1 quarter of 2017, I started work on `Ozone` project. This project is quite famous because of its ambition of fixing long-standing HDFS scalability issue, by introducing a general block storage layer. I've done many work including the metadata store, key-deletion process and core API etc.
+
+At Sep 2017, I was selected as an `Apache Hadoop Committer` on account of the continua contributions to the project.
